<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:text="@string/menu_reserv_call"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/easy_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/min5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/min5" />

            <RadioButton
                android:id="@+id/min10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min10" />

            <RadioButton
                android:id="@+id/min20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min20" />

            <RadioButton
                android:id="@+id/setTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_timer" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/upButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="pickerClick"
                    android:text="@string/plus" />

                <EditText
                    android:id="@+id/numberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2" />

                <Button
                    android:id="@+id/downButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="pickerClick"
                    android:text="@string/minus" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/min" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="60dip"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:background="#FF313231"
                android:paddingBottom="15dip"
                android:paddingTop="15dip"
                android:text="@string/start"
                android:textColor="#FFFFFF"
                android:textSize="20dip"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:background="#FF313231"
                android:paddingBottom="15dip"
                android:paddingTop="15dip"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:textSize="20dip"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>